2005-06-15  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/drivers/psycopgconn.py (PsycopgDBI.autocommit): fix
	implementation for psycopg2 (had it exactly backwards).
	(PsycopgDBI.describeTable): fix for multi-column unique
	constraints (was including fields, not field names) and exclude
	nullable columns from unique constraints.

	* src/pydo/drivers/sqliteconn.py (SqliteDBI.describeTable): coerce
	nullable to an int, as some pysqlite versions don't return an int
	for the notnull column in pragma table_info (found by
	test_base.test_guess_columns1). 

2005-06-14  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/runtests.py, tests/config.py (readCmdLine): now takes an
	additional option, --pattern.

	* tests/test_base.py (test_project2): proved its worth by finding
	a projection bug.  

	* src/pydo/base.py (_metapydo.__init__): fix for projection bug: I
	was storing projections for each class in what I thought was a
	separate dictionary, but it was actually being inherited from
	PyDO!  Now each class gets its very own.
	(_restrict): now more tolerant of whether fields are field
	instances or just strings.

2005-06-13  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: document autoschema.

	* src/pydo/base.py (autoschema): function that creates barebones
	PyDO objects for all tables in a schema (for quick scripts).

	* src/pydo/drivers/psycopgconn.py (PsycopgDBI.autocommit): for
	psycopg2, implement autocommit in terms of isolation_level and
	set_isolation_level. 

2005-06-12  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_dbi.py: first actual tests in the new series.

	* tests/README.tests: some rudimentary instructions.

	* tests/pydotestrc.sample: adding sample rc file for tests.

	* tests: moved old tests to a subdirectory, and added stubs for new 
	tests. 

2005-06-10  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: document adding username to default cachedir.

	* src/pydo/guesscache.py (GuessCache.__init__): cachedir now